--- a/TaskList/BlueTheme.xaml
+++ b/TaskList/BlueTheme.xaml
@@ -5,9 +5,10 @@
         <Setter Property="Margin" Value="1"/>
         <Setter Property="Background" Value="#64b5f6"/>
         <Setter Property="BorderBrush" Value="White"/>
-        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontSize" Value="18"/>
     </Style>
-    
+
+
     <Style x:Key="DarkInfo" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="Roboto"/>
         <Setter Property="Foreground" Value="#2c387e"/>
@@ -17,9 +18,9 @@
 
     <Style TargetType="TextBlock">
         <Setter Property="FontFamily" Value="Roboto"/>
-        <Setter Property="Foreground" Value="White"/>
+        <!--<Setter Property="Foreground" Value="#232323"/>-->
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="FontSize" Value="20"/>
+        <!--<Setter Property="FontSize" Value="20"/>-->
     </Style>
 
 
@@ -51,7 +52,7 @@
                             <ColumnDefinition Width="7*"/>
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center">TaskList</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Foreground="White" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center">TaskList</TextBlock>
                         <TextBlock Background="#386389" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">✔</TextBlock>
 
                     </Grid>
