--- a/TaskList/Pages/MainPage.xaml
+++ b/TaskList/Pages/MainPage.xaml
@@ -12,6 +12,7 @@
         <Grid.RowDefinitions>
             <RowDefinition  />
             <RowDefinition Height="8*"/>
+            <RowDefinition  />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -22,10 +23,32 @@
             <TextBlock HorizontalAlignment="Center">LISTNAME</TextBlock>
         </Grid>
         <Button x:Name="MenuBtn" Click="MenuBtn_Click" Height="37" Margin="1,1,1,0" VerticalAlignment="Top">Меню</Button>
-        <ListBox Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Background="#759fcc"></ListBox>
-        <ListBox x:Name="TaskListsLB" Grid.Row="1" Grid.RowSpan="2" Background="Transparent"></ListBox>
-
-        <Grid Grid.Column="2" Grid.RowSpan="2" Background="#9cc3e5">
+        <ListBox x:Name="ListOfTasks" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Background="#759fcc" SelectionChanged="ListOfTasks_SelectionChanged">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid Margin="0,2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="5*" />
+                            <ColumnDefinition Width="5*" />
+                            <ColumnDefinition Width="5*" />
+                        </Grid.ColumnDefinitions>
+                        <CheckBox  IsChecked="{Binding IsCompleted}" Margin="0,0,5,0"></CheckBox>
+                        <TextBlock Grid.Column="1" Text="{Binding Name}" FontSize="15" Margin="0,0,5,0" />
+                        <TextBlock  Grid.Column="2" Text="{Binding DueDate}" FontSize="15" Margin="0,0,5,0"/>
+                        <TextBlock Grid.Column="3" Text="{Binding AssignedUser}" FontSize="15" />
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <StackPanel Orientation="Vertical" Grid.Row="1" Grid.RowSpan="3">
+            <Button x:Name="ActiveTasks" Click="ListBtn_Click">Активные</Button>
+            <Button x:Name="AllTasks" Click="ListBtn_Click">Все</Button>
+            <Button x:Name="CompletedTasks" Click="ListBtn_Click">Выполненные</Button>
+            <Button x:Name="AssignedByMeTasks" Click="ListBtn_Click">Назначенные</Button>
+        </StackPanel>
+        
+        <Grid Grid.Column="2" Grid.RowSpan="3" Background="#9cc3e5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="3*"/>
                 <RowDefinition />
@@ -36,17 +59,26 @@
                 <RowDefinition />
                 <RowDefinition Height="5*"/>
             </Grid.RowDefinitions>
-            <Button Grid.Row="1">Активность</Button>
-            <Button Grid.Row="2">Выполнить</Button>
-            <Button Grid.Row="3">Сохранить</Button>
-            <Button Grid.Row="4">Удалить</Button>
-            <TextBox  TextWrapping="Wrap" Margin="7">TaskName</TextBox>
-            <ComboBox  Grid.Row="5" Margin="3,0,3,3">
-                <ComboBoxItem >Мной</ComboBoxItem>
+            <Button x:Name="isActiveBtn" Grid.Row="1" FontSize="12" Click="isActiveBtn_Click">Сделать неактивной</Button>
+            <Button x:Name="isCompletedBtn" Grid.Row="2" FontSize="11" Click="isCompletedBtn_Click">Выполнить</Button>
+            <Button x:Name="saveBtn" Grid.Row="3" Click="saveBtn_Click">Сохранить</Button>
+            <Button x:Name="deleteBtn" Grid.Row="4" Click="deleteBtn_Click">Удалить</Button>
+            
+            <TextBox x:Name="taskNameTB" TextWrapping="Wrap" Margin="7">TaskName</TextBox>
+            <ComboBox Foreground="Black" x:Name="assignedCB" ItemsSource="{Binding}" DisplayMemberPath="LastName" SelectedValuePath="ID" Grid.Row="5" Margin="3,0,3,3">
             </ComboBox>
-            <DatePicker Grid.Row="6"></DatePicker>
-            <TextBox  Grid.Row="7" TextWrapping="Wrap" Margin="7">Description</TextBox>
-
+            <DatePicker x:Name="dueDateDP" Grid.Row="6"></DatePicker>
+            <TextBox x:Name="descriptionTB" Grid.Row="7" TextWrapping="Wrap" Margin="7">Description</TextBox>
+            
         </Grid>
+        <Grid Grid.Row="2" Grid.Column="1"  Background="#1976d2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="8*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <TextBox x:Name="NewTaskName" Margin="5"></TextBox>
+            <Button Grid.Column="1" x:Name="AddATask" Click="AddATask_Click" Margin="5">➕</Button>
+        </Grid>
+        
     </Grid>
 </Page>
