--- a/TaskList/ContainerForPagesWindow.xaml
+++ b/TaskList/ContainerForPagesWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TaskList"
         mc:Ignorable="d"
-        Title="ContainerForPagesWindow" Height="450" Width="800">
+        Title="TaskList" Height="450" Width="800">
     <Grid Style="{StaticResource WindowBackground}">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
