--- a/TaskList/Pages/MainPage.xaml
+++ b/TaskList/Pages/MainPage.xaml
@@ -20,7 +20,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="1" Background="#759fcc">
-            <TextBlock HorizontalAlignment="Center">LISTNAME</TextBlock>
+            <TextBlock x:Name="SelectedListNameTxt" HorizontalAlignment="Center"></TextBlock>
         </Grid>
         <Button x:Name="MenuBtn" Click="MenuBtn_Click" Height="37" Margin="1,1,1,0" VerticalAlignment="Top">Меню</Button>
         <ListBox x:Name="ListOfTasks" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Background="#759fcc" SelectionChanged="ListOfTasks_SelectionChanged">
